simplified radion hp dual configuation to eliminate xinerama and zaphodheads

--- a/injections/xorg-hp-dual.conf
+++ b/injections/xorg-hp-dual.conf
@@ -19,6 +19,15 @@ Section "Monitor"
 
 EndSection
 
+Section "Monitor"
+	Identifier "HP2"
+	Option "RightOf" "HP1"
+EndSection
+
+Section "Monitor"
+	Identifier "HP1"
+EndSection
+
 #
 # Unused auxilliary board.
 #
@@ -40,7 +49,7 @@ Section "Device"
 # [Xorg.0.log]
 # (--) RADEON(1): Chipset: "ATI Radeon HD 5700 Series" (ChipID = 0x68be)
 
-	Identifier "radeon_I"
+	Identifier "radeon_card"
 	Driver "ati" # radeon
 
 	# Oct-2010 reports just Depth 24 is available, not 32.
@@ -48,188 +57,18 @@ Section "Device"
 	VendorName "ATI"
 	BoardName "Radeon HD700"
 	BusID "PCI:7:0:0"
-	Option "ZaphodHeads" "DVI-0"
-	Option "IgnoreEDID" "true"
-	Screen 0
-
-EndSection
-
-Section			"Device"
-
-# [lspci]
-# VGA compatible controller: ATI Technologies Inc Device 68be
-
-# [Xorg.0.log]
-# (--) RADEON(1): Chipset: "ATI Radeon HD 5700 Series" (ChipID = 0x68be)
-
-	Identifier	"radeon_II"
-	Driver		"ati" # radeon
-
-	# Oct-2010 reports just Depth 24 is available, not 32.
-
-	VendorName	"ati"
-	BoardName "Radeon HD5700"
-	BusID "PCI:7:0:0"
-	Option "ZaphodHeads" "DVI-1"
-	Option "IgnoreEDID" "true"
-	Screen 1
-
-EndSection
-
-Section			"Device"
-
-# [lspci]
-# VGA compatible controller: ATI Technologies Inc Device 68be
-
-# [Xorg.0.log]
-# (--) RADEON(1): Chipset: "ATI Radeon HD 5700 Series" (ChipID = 0x68be)
-
-	Identifier	"radeon_DPAIR"
-	Driver		"ati" # radeon
-
-	# Oct-2010 reports just Depth 24 is available, not 32.
-
-	VendorName	"ati"
-	BoardName "Radeon HD5700"
-	BusID "PCI:7:0:0"
-	Option "ZaphodHeads" "DVI-1, DVI-0"
 	Option "IgnoreEDID" "true"
 
-EndSection
+	Option "monitor-DVI-0" "HP2"
+	Option "monitor-DVI-1" "HP1"
 
-Section "Device"
-
-	Identifier "radeon_II_I"
-	Driver "ati" # radeon
-	VendorName "ATI"
-	BoardName "Radeon HD5700"
-	BusID "PCI:7:0:0"
-	Option "ZaphodHeads" "DVI-1, DVI-0"
-	Option "IgnoreEDID" "true"
-
-EndSection
-
-Section "Device"
-
-	Identifier "radeon_xrandr"
-	Driver "ati" # radeon
-	VendorName "ATI"
-	BoardName "Radeon HD5700"
-	BusID "PCI:7:0:0"
-#	Option "ZaphodHeads" "DVI-1, DVI-0"
-	Option "IgnoreEDID" "true"
 
 EndSection
 
 Section "Screen"
-	Identifier "Screen_II_I"
-	Device "radeon_II_I"
-	Monitor "HP"
+	Identifier "Screen_Pair"
+	Device "radeon_card"
 	DefaultDepth 24
-	SubSection "Display"
-	   Virtual 0 0
-	   Modes "2560x1600_60"
-	   Depth 24
-	EndSubSection
-	SubSection "Display"
-	   Virtual 0 0
-	   Modes "2560x1600_60"
-	   Depth 32
-	EndSubSection
-EndSection
-
-Section "Screen"
-	Identifier "Screen_II__Virtual"
-	Device "radeon_II_I"
-	Monitor "HP"
-	DefaultDepth 24
-	SubSection "Display"
-	   Virtual 5120 1600
-	   Modes "2560x1600_60"
-	   Depth 24
-	EndSubSection
-	SubSection "Display"
-	   Virtual 5120 1600
-	   Modes "2560x1600_60"
-	   Depth 32
-	EndSubSection
-EndSection
-
-Section "Screen"
-	Identifier "Screen_SPAIR"
-	Device "radeon_DPAIR"
-	Monitor "HP"
-	DefaultDepth 24
-	SubSection "Display"
-	   Virtual 5120 1600
-	   Modes "2560x1600_60"
-	   Depth 24
-	EndSubSection
-	SubSection "Display"
-	   Virtual 5120 1600
-	   Modes "2560x1600_60"
-	   Depth 32
-	EndSubSection
-EndSection
-
-Section "Screen"
-	Identifier "Screen_I"
-	Device "radeon_I"
-	Monitor "HP"
-	DefaultDepth 24
-	SubSection "Display"
-	   Modes "2560x1600_60"
-	   Depth 24
-	EndSubSection
-	SubSection "Display"
-	   Modes "2560x1600_60"
-	   Depth 32
-	EndSubSection
-EndSection
-
-Section "Screen"
-	Identifier "Screen_I_Virtual"
-	Device "radeon_I"
-	Monitor "HP"
-	DefaultDepth 24
-	SubSection "Display"
-	   Virtual 5120 1600
-	   Modes "5120x1600"
-	   Depth 24
-	EndSubSection
-	SubSection "Display"
-	   Virtual 5120 1600
-	   Modes "5120x1600"
-	   Depth 32
-	EndSubSection
-EndSection
-
-Section "Screen"
-	Identifier "Screen_II"
-	Device "radeon_II"
-	Monitor "HP"
-	DefaultDepth 24
-	SubSection "Display"
-	   Virtual 0 0
-	   Modes "2560x1600_60"
-	   Depth 24
-	EndSubSection
-	SubSection "Display"
-	   Virtual 0 0
-	   Modes "2560x1600_60"
-	   Depth 32
-	EndSubSection
-EndSection
-
-Section "Screen"
-	Identifier "Screen_xrandr"
-	Device "radeon_xrandr"
-	Monitor "HP"
-	DefaultDepth 24
-	SubSection "Display"
-	   Virtual 5120 1600
-	   Depth 24
-        EndSubSection	   
 	SubSection "Display"
 	   Modes "2560x1600_60"
 	   Depth 24
@@ -249,61 +88,9 @@ EndSection
 
 Section "ServerLayout"
 	Identifier "DefaultServerLayout"
-	Screen "Screen_xrandr"
+	Screen "Screen_Pair"
 	Option "Xinerama" "off"
 	Option "CloneDisplay" "off"
-#	Option "DualHead" "false"
-EndSection
-
-Section "ServerLayout"
-	Identifier "SynergyStuckCursor_Dual"
-	Screen "Screen_I"
-	Screen "Screen_II" LeftOf "Screen_I"
-	Option "Xinerama" "on"
-	Option "CloneDisplay" "off"
-#	Option "DualHead" "false"
-EndSection
-
-Section "ServerLayout"
-	Identifier "Combined_Pair"
-	Screen "Screen_SPAIR"
-	Option "Xinerama" "on"
-	Option "CloneDisplay" "off"
-	Option "DualHead" "false"
-EndSection
-
-Section "ServerLayout"
-	Identifier "Lower_Pair"
-	Screen "Screen_I" 
-	Screen "Screen_II" RightOf "Screen_I"
-	Option "Xinerama" "on"
-	Option "CloneDisplay" "off"
-	Option "DualHead" "false"
-EndSection
-
-Section "ServerLayout"
-# Comes up both displays DVI-2 and DVI-3 but with the displays duplicated.
-	Identifier "Lower_Pair_Xinerama"
-	Screen "Screen_I" 
-	Option "Xinerama" "on"
-	Option "CloneDisplay" "off"
-	Option "DualHead" "false"
-EndSection
-
-Section "ServerLayout"
-	# Test one screen only.
-	Identifier "Screen_I"
-	Screen "Screen_I"
-	Option "Xinerama" "off"
-	Option "DualHead" "false"
-EndSection
-
-Section "ServerLayout"
-	# Test one screen only.
-	Identifier "Screen_II"
-	Screen "Screen_II"
-	Option "Xinerama" "off"
-	Option "DualHead" "false"
 EndSection
 
 Section "DRI"
